[gd_scene load_steps=4 format=3 uid="uid://dotok77073p27"]

[ext_resource type="Script" uid="uid://d3sqms6rf80rn" path="res://card_layouts/tcg_style.gd" id="1_cj1up"]
[ext_resource type="FontFile" uid="uid://cup7mdj3b74v6" path="res://examples/tcg_style/quaver.ttf" id="2_0qomc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0a68r"]
bg_color = Color(0.15, 0.127525, 0.1035, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.13520244, 0.00978677, 0.050112493, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 16

[node name="FrontCardLayout" type="SubViewportContainer"]
offset_right = 80.0
offset_bottom = 112.0
script = ExtResource("1_cj1up")
metadata/_custom_type_script = "uid://dm115oleoggyt"

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(120, 140)
render_target_update_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0a68r")

[node name="FullArtRect" type="TextureRect" parent="SubViewport/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SubViewport/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ArtRect" type="TextureRect" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
stretch_mode = 4

[node name="NameLabel" type="Label" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0qomc")
theme_override_font_sizes/font_size = 16
text = "Name"
horizontal_alignment = 1
